--- a/q/275291.html
+++ b/q/275291.html
@@ -26,19 +26,47 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>080</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
-<tr d-ix="1"><td>240</td><td>Python3</td><td>240902T011448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275296#275296">Ajax1234</a></td></tr>
-<tr d-ix="2"><td>014</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
-<tr d-ix="3"><td>052</td><td>Charcoal</td><td>240901T222104Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275294#275294">Neil</a></td></tr>
+<tr d-ix="0"><td>018</td><td>05AB1E</td><td>240902T074349Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275302#275302">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>080</td><td>JavaScript V8</td><td>240901T191037Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275292#275292">Arnauld</a></td></tr>
+<tr d-ix="2"><td>240</td><td>Python3</td><td>240902T011448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275296#275296">Ajax1234</a></td></tr>
+<tr d-ix="3"><td>014</td><td>Jelly</td><td>240901T193948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275293#275293">Unrelate</a></td></tr>
+<tr d-ix="4"><td>052</td><td>Charcoal</td><td>240901T222104Z</td><td><a href="https://codegolf.stackexchange.com/questions/275291/how-many-ways-can-you-make-change/275294#275294">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 80 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 18 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>FĆ}¹Åœèε.«âεS{]€`Ù
+</code></pre>
+<p>Inputs in the order <span class="math-container">\$n,objectLists\$</span>, including an empty list at index 0.<br />
+Assumes the objects are always a single character (otherwise the <code>S</code> should be <code>¸˜</code> for +1 byte).</p>
+<p><a href="https://tio.run/##yy9OTMpM/f/f7Uhb7aGdh1uPTj684txWvUOrDy86tzW4OvZR05qEwzP//zfnio6O1YlWSlbSUSpWArGMQCQEKTkBRb2UYmMB" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/R/iquSZV1BaYqWgZO@nw6XkX1oC4en4Kf13O9JW63e49ejkwyvObdU7tPrwonNbg6tjHzWtSTg887@SXpjOoW32/6OjY3WilZKVdJSKlUAsIxAJQUpOQFEvpdhYAA" rel="nofollow noreferrer">verify multiple <span class="math-container">\$n\$</span> at once</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>F }      # Loop the first (implicit) input amount of times:
+ Ć       #  Enclose the second (implicit) input-list;
+         #  appending its own head (the [] at index 0)
+   ¹     # Push the first input-integer n again
+    Åœ   # Get all lists of positive integers that sum to this n
+      è  # (0-based) index each into the list of lists
+ε        # Map over each list of lists:
+ .«      #  Reduce each list of lists by:
+   â     #   Cartesian product
+    ε    #  Map over each reduced list of lists:
+     S   #   Convert it to a flattened list of characters
+      {  #   Sort this list of characters
+]        # Close the nested maps
+ €`      # Flatten it one level down
+         # (which has as side-effect that each inner list is reversed)
+   Ù     # Uniquify this list of lists
+         # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 80 bytes</h1>
 <p>Expects <code>(list_of_lists)(n)</code> without the list of weight 0. Outputs by printing comma-separated strings.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;g=(n,...o)=&gt;n?a.map(b=&gt;n--&gt;0&amp;&amp;b.map(c=&gt;g(n,...o,c))):o+&quot;&quot;==o.sort()&amp;&amp;print(o)
 </code></pre>
 <p><a href="https://tio.run/##dY5NC4JAEIbv/ophDrJD61qaEMkaduwviId1yzBoV1Skf29@VHhpTjPP8zK8D9WrVjdV3Xn9YSjloGRyl8xwIYQlmZiTEk9Vs2JcPS/Zum4x33qMfVJcE9HRbhCltKK1TcfIdeumMh2zNGhr2g5SkJA5ABlq5IAt5hx8Hypzvb1gN4tgYvP8RDCJL12L8J/Yz6/OyPGC@VpETh47TslSYiHFsNSjeCERDW8" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Python3, 240 bytes</h1>
+<div id="pu2" class="pu"><h1>Python3, 240 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>from itertools import*
 R=range
 def f(c,n):
@@ -49,7 +77,7 @@ def f(c,n):
 </code></pre>
 <p><a href="https://tio.run/##JY6xTsMwEIb3PMXJ09k9VKALCnihG90aqYvlATk2OEptx3GHCvHswSHS6Yb/Pt33p3v5juHwkvKyuByv4IvNJcZxBn9NMRfRnGX@DF@26a0Dh4YCbxuYpEKFfvdERnnNXczgwQc442gDGs69g/Wi6ZGU5rqBFTFUqFuxqb6AihQpQ3v3duyh3NJoca5K22PH@QaYFj0dOQkjzeu0q1ZDF1KiI3HatMOmxfBQ@H5fG/2npzVNOfY3U1CooxZDrYSXVpbdIDx/k0EvKftQ8Ec4VNWmmGEEbGaaFHte9zbsnRH7YLrRdOC/fPkD" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>15</s> 14 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>15</s> 14 bytes</h1>
 <pre><code>ŒṗịŒp€ẎṢ€Qɓ;Ṭ}
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8///opIc7pz/c3X10UsGjpjUPd/U93LkIyAg8Odn64c41tf@BIkDu4eVAwgEi5f7/fzSXgoKyQnSsjgIMKCtk5qWkVigYAGWilZKVdBSUipWA8jBxQ7C4kRJMC0zcCCSOxRxjHOImYHOclHSUvJRikcRNuWL/mwEA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -93,7 +121,7 @@ Lr‘ṁƒḷ          This reuses the empty first list repeatedly to pad to n+1
 </code></pre>
 <p>As an amusing aside... I meant to use <code>¥</code> in place of <code>$</code>, but there's no difference here, because apparently <code>/</code> coercing its operand to a dyad even affects how said operand chains.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 52 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 52 bytes</h1>
 <pre><code>⊞υ⊞ＯＥθκωＦυ≡§Ｉ⁻↨Ｅ§ι±¹§θκ¹η⁰0…⮌ι¹-¿⊖Ｌι⊞⊞ＯυΦιλ⊞Ｏι⁺⊟ι§ι⁰
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VVBBTsMwEBTXvmKV01o4UlMJhOBEg5BAFCKuVQ_G3TQWJgm204KqvoRLDyD4UnkNm7SV6MEae3dndsYfP7pQTlfKrtdfTcjjs9-j46zxBTYSWnyoyalQORypGl8lPAsJCyEuennlABsBfmGCLgAvw005pTdMlQ84MmXjcag8dbx9z0i4p5kKhIlgnX25k-V3wqdoL30hYNnTTIeoH51D5kwZMH3XltKiqvGR5uRY23QkNrMdjXnU5IBXpB29UBloindUzkLBkyzZ5ToIxSGvjQ3kWmu2XX3Q5mJmOUjGO80_w6azyHtXn_5J-93PfY-jeG6jySYeLyPNXhIJkd_hgHHAOGQ8YbxtcSXhdLIl_wE" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Takes the collection as a dictionary mapping coin identifiers to values. Explanation:</p>
