--- a/q/17294.html
+++ b/q/17294.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>272</td><td>Python 2</td><td>140103T203204Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17370#17370">tecywiz1</a></td></tr>
-<tr d-ix="1"><td>215</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
+<tr d-ix="0"><td>209</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
+<tr d-ix="1"><td>272</td><td>Python 2</td><td>140103T203204Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17370#17370">tecywiz1</a></td></tr>
 <tr d-ix="2"><td>131</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
 <tr d-ix="3"><td>207</td><td>J</td><td>240830T171122Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275267#275267">Conor O&</a></td></tr>
 <tr d-ix="4"><td>089</td><td>Japt R</td><td>180601T092243Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/165896#165896">Shaggy</a></td></tr>
@@ -73,7 +73,25 @@
 <tr d-ix="44"><td>502</td><td>Lua 5.1</td><td>140105T201056Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17656#17656">finnbar</a></td></tr>
 <tr d-ix="45"><td>442</td><td>PHP</td><td>140103T190034Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17358#17358">Sammitch</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 272 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> <sub><s>215</s></sub> 209 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>T=METHINKS@IT@IS@LIKE@A@WEASEL S=(`jot -cr 28 @ Z`)
+for i ({0..99}){V=0 j=;echo -n $i: ${(j::)S//@/ }
+for x ($S){n=$T[++j];((#x!=#n&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -cr 1 @ Z`||((V++))}
+&lt;&lt;&lt;&quot; -- score: $V&quot;;((V==28))&amp;&amp;?}
+</code></pre>
+<p><a href="https://tio.run/##Pc3NCoJAFEDhvU9xM5MZxDRX/l0aISEpDRoxKAJBipqFgrWI1GefykUPcM73ftykzDGN83WSbThLcpZwtk02MYvYIY54vAWOpBTNE8yqBccFBseSKtemhTuQzp7PPW@gXYE2CAwu1a0Bswbt7oPWEeH7lFsWs2AYixcQjdOuRi0/GYY4B4RMXxOc1rq@j7LVLp05NqW6zk/ijH90MZp9T0hhGJQOShiGKpgmPKqmvXyhQv2OCkTH/cXLQcoP" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##Lc3BCoJAAIThe08xldkusmmeSl1aISHJCloxKARBjPKgoB0i89nNovs/873qW9eFfOeFG3@/lcIPhS9F4G894YqT50ovgORJXj7AakynYGkFcwGBczK4lhXuII0xmy2XLW0ibiDndpbeSrACyt2C0khdFzraX/wEURpSWxaVfV5wJbxoWh7bhIyfQz4uVPXo7teH3cQ0KFVVecnjv92r8x/6fhMSaRql7cBxnBEYQ52WVdZT0ag/ijg3F9/xqu26Dw" rel="nofollow noreferrer">215b</a></s></sub>
+<sub><s><a href="https://tio.run/##Nc3LaoNAGIbhvVfx1Vgzg0y0EkI8/DBChUoOhY7YRQgExBJdKGgWUvHabSLp/uF9f7vrNKWkH@L0IznulExSmSi5T3axjOR3HKl4r2uKLlVzg@iwXELkEC3cLTZreM5F@2lalGCDs1p53siHjBxUFBT5tYGoYZQ@jEHZtrQxzrgHMwbW@T5Xd16TkZ4sqzprjC36F1rUpvkVHd8/D6@uw7lpqlN1fv7n89v/@OFp9pllcT4GYRjqEAJd3rTF/ZrpAWMZkbt9dIq@vI3T9Ac" rel="nofollow noreferrer">235b</a></s></sub>
+<sub><s><a href="https://tio.run/##dY1Ni4JQFIb3/ooz6si5XEyRoSbzwBUSRvqCrtgigiCMdKGDtpDk/nbHhKDNbF@e530eza3vE9I3UfITb1dSxImIpVjHq0iE4hCFMlrrmqTztaohB@zcycSbKfZb5@X9CmaHBjMR9@F2udt8ejM@/WJMnbU3fD5XrEvJhYIW2eVWgV2CmfuDKx1HOKBGuAUczhrfZ3LASzKTI@fFSUM02g8ySst6NVzGLEseixP9Ux8dGp2U8@cQBIEOtg3NpaqzoZzqC8SUyPt@fmVtfld9/wc" rel="nofollow noreferrer" title="Zsh – Try It Online">260b</a></s></sub></p>
+<p>Found the question a bit confusing, but eventually figured it out. For a minute I thought I had <a href="https://tio.run/##TVBta4JQFP5@f8VZ3dm9iGUyRrWdYTAh6WWQkmAEDmuUWlYGg5m/3R1Fxj4c7jkPz8s95yfbl6WLrbnlTuzF1DFt17Qdc2ZPLXNsetbYsWYtdhYySm@gZdDpgBaCdgVjAM9PMNTZRcicfaVXOIDI9W53OCwIAPAQYoQjQoQ0LTE4B/SekLtrVY021FeiGATPRTYayT7JQIh2jNg@SakoKfKYWFCDDw0oxHK8eP@YPxp6w1mS3XFTEz0VeUpdQRUhrFB/aWKSvxiviqnZ/79ShyRVsqKsVFXK2mUX7lPgHvAVK@5ZeqULxMb99nlIQOu/bVnBLlCt9b0/JDtyCF@NgaTlfRRBw4JtIBuf3O/1zB7Zhsj9tbEhMfdZUZa/" rel="nofollow noreferrer">disproved</a>* evolution!! <sub>(*actually a limitation of the zsh $RANDOM function in <a href="https://unix.stackexchange.com/questions/728975/reinitialize-random-to-be-reinitialized">subshells</a>)</sub></p>
+<ul>
+<li>Using <code>@</code> in the target string allows me to use ASCII range 64-90</li>
+<li>Using <code>jot -c -r 28 64 90</code> is better than repeatedly doing <code>${(#)$((RANDOM%27+64))}</code></li>
+<li>Saved 20 bytes by removing <code>&quot;&quot;</code>, squishing <code>jot</code> parameters to <code>-cr 1 @ Z</code>, using <code>?</code> to crash the script, removing duplication</li>
+<li>Saved 6 bytes by using <code>$S</code> as an array rather than a string.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 272 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from random import choice as c
 n=range
@@ -84,22 +102,6 @@ while p&lt;28:
  p,s=max((sum(g==r for g,r in zip(y,'METHINKS IT IS LIKE A WEASEL')),y)for y in ([c(a+[x]*513)for x in s]for _ in n(100)));print '%d: %s -- score: %d' % (x,''.join(s),p);x+=1
 </code></pre>
 <p><a href="https://tio.run/##JYuxboMwGIR3P8W/INvBqYAoVZrUQwakoqRdiNQBocoyBFwV27KpCn15GqfT3X13Z@exNzpblqszAzihm5uowRo3guyNki0IDxJpfuu6Fgk@CEtk75gmj1v2lNK42mQ1Rf6/YJWoV9mOIssnnqCfXn21YJ@z3R6BZWE0EeK/B9Jx7uBqHHTMgdLwqyyZGX7NLy/F26mE4gJFCefilMMR3vNjmZ8xpWym4TOHB6kkEXE11atturnjKWBfB/sRrCZpklBKD9YpPQKOmj1EHtZr8NK49hYaDBGQiWH88GmUJp4ySw9TzNNl@QM" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> 215 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>T=METHINKS@IT@IS@LIKE@A@WEASEL S=`jot -s '' -cr 28 @ Z`
-for i ({0..99}){V=0 j=;echo -n $i: ${S//@/ }
-for x (${(s::)S}){n=$T[++j];((#x!=#n&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -cr 1 @ Z`||((V++))}
-&lt;&lt;&lt;&quot; -- score: $V&quot;;((V==28))&amp;&amp;?}
-</code></pre>
-<p><a href="https://tio.run/##Lc3BCoJAAIThe08xldkusmmeSl1aISHJCloxKARBjPKgoB0i89nNovs/873qW9eFfOeFG3@/lcIPhS9F4G894YqT50ovgORJXj7AakynYGkFcwGBczK4lhXuII0xmy2XLW0ibiDndpbeSrACyt2C0khdFzraX/wEURpSWxaVfV5wJbxoWh7bhIyfQz4uVPXo7teH3cQ0KFVVecnjv92r8x/6fhMSaRql7cBxnBEYQ52WVdZT0ag/ijg3F9/xqu26Dw" rel="nofollow noreferrer">Try it online!</a>
-<sub><s><a href="https://tio.run/##Nc3LaoNAGIbhvVfx1Vgzg0y0EkI8/DBChUoOhY7YRQgExBJdKGgWUvHabSLp/uF9f7vrNKWkH@L0IznulExSmSi5T3axjOR3HKl4r2uKLlVzg@iwXELkEC3cLTZreM5F@2lalGCDs1p53siHjBxUFBT5tYGoYZQ@jEHZtrQxzrgHMwbW@T5Xd16TkZ4sqzprjC36F1rUpvkVHd8/D6@uw7lpqlN1fv7n89v/@OFp9pllcT4GYRjqEAJd3rTF/ZrpAWMZkbt9dIq@vI3T9Ac" rel="nofollow noreferrer">235b</a></s></sub>
-<sub><s><a href="https://tio.run/##dY1Ni4JQFIb3/ooz6si5XEyRoSbzwBUSRvqCrtgigiCMdKGDtpDk/nbHhKDNbF@e530eza3vE9I3UfITb1dSxImIpVjHq0iE4hCFMlrrmqTztaohB@zcycSbKfZb5@X9CmaHBjMR9@F2udt8ejM@/WJMnbU3fD5XrEvJhYIW2eVWgV2CmfuDKx1HOKBGuAUczhrfZ3LASzKTI@fFSUM02g8ySst6NVzGLEseixP9Ux8dGp2U8@cQBIEOtg3NpaqzoZzqC8SUyPt@fmVtfld9/wc" rel="nofollow noreferrer" title="Zsh – Try It Online">260b</a></s></sub></p>
-<p>Found the question a bit confusing, but eventually figured it out. For a minute I thought I had <a href="https://tio.run/##TVBta4JQFP5@f8VZ3dm9iGUyRrWdYTAh6WWQkmAEDmuUWlYGg5m/3R1Fxj4c7jkPz8s95yfbl6WLrbnlTuzF1DFt17Qdc2ZPLXNsetbYsWYtdhYySm@gZdDpgBaCdgVjAM9PMNTZRcicfaVXOIDI9W53OCwIAPAQYoQjQoQ0LTE4B/SekLtrVY021FeiGATPRTYayT7JQIh2jNg@SakoKfKYWFCDDw0oxHK8eP@YPxp6w1mS3XFTEz0VeUpdQRUhrFB/aWKSvxiviqnZ/79ShyRVsqKsVFXK2mUX7lPgHvAVK@5ZeqULxMb99nlIQOu/bVnBLlCt9b0/JDtyCF@NgaTlfRRBw4JtIBuf3O/1zB7Zhsj9tbEhMfdZUZa/" rel="nofollow noreferrer">disproved</a> evolution!!</p>
-<ul>
-<li>Using <code>@</code> in the target string allows me to use ASCII range 64-90</li>
-<li>Using <code>jot -c -r 28 64 90</code> is better than repeatedly doing <code>${(#)$((RANDOM%27+64))}</code></li>
-<li>Saved bytes by removing <code>&quot;&quot;</code>, squishing <code>jot</code> parameters to <code>-cr 1 @ Z</code>, using <code>?</code> to crash the script, removing duplication</li>
-</ul>
 </div>
 <div id="pu2" class="pu"><h1>Uiua, <s>142</s> <s>136</s> 131 bytes</h1>
 <pre><code>R←⊏:⊂@ +@A⇡26⌊×27≡⋅⚂
