--- a/q/17294.html
+++ b/q/17294.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>204</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
+<tr d-ix="0"><td>201</td><td>Zsh +coreutils</td><td>240831T064219Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275276#275276">roblogic</a></td></tr>
 <tr d-ix="1"><td>272</td><td>Python 2</td><td>140103T203204Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17370#17370">tecywiz1</a></td></tr>
 <tr d-ix="2"><td>131</td><td>Uiua</td><td>240830T214611Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275271#275271">noodle p</a></td></tr>
 <tr d-ix="3"><td>207</td><td>J</td><td>240830T171122Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/275267#275267">Conor O&</a></td></tr>
@@ -73,13 +73,13 @@
 <tr d-ix="44"><td>502</td><td>Lua 5.1</td><td>140105T201056Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17656#17656">finnbar</a></td></tr>
 <tr d-ix="45"><td>442</td><td>PHP</td><td>140103T190034Z</td><td><a href="https://codegolf.stackexchange.com/questions/17294/golfing-a-weasel-program/17358#17358">Sammitch</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> <sub><s>215</s></sub> <sub><s>209</s></sub> 204 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>T=METHINKS@IT@IS@LIKE@A@WEASEL S=(`jot -cr 28 @ Z`)
-for i ({0..99}){V=0 j=;printf $i:\ ${(j::)S//@/ }
-for x ($S)((#x!=##$T[++j]&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -cr 1 @ Z`||((V++))
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>260</s></sub> <sub><s>235</s></sub> <sub><s>215</s></sub> <sub><s>209</s></sub> 201 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>p()jot -cr $1 @ Z;T=METHINKS@IT@IS@LIKE@A@WEASEL;S=(`p 28`)
+for i ({0..99}){V= j=;printf $i:\ ${(j::)S//@/ }
+for x ($S)((#x!=##$T[++j]&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`p 1`||((V++))
 &lt;&lt;&lt;&quot; -- score: $V&quot;;((V==28))&amp;&amp;?}
 </code></pre>
-<p><a href="https://tio.run/##Pc3LCoJAGEDhvU/xl5PMIF5yVebQCAmJWtCIQSUIUeQsMtSFpD67lYvWh4/zrh7DENPIi7f@LuDMj5nPWegHHnPZ0XO5FwKnOBNFDdq1BGsBDE4Zke5FCTng1tT15bInbUJNEHT1KvNnfQeU2xdALRa2TbhhMAP6UTSAEScYy82EyjKKz6oqUkU5uLvNPppZJiGKws8ipf/hfPx1HcaJqhIiOY4zBU2D6lqUNxtQMl19E6XW4mfX/TB8AA" rel="nofollow noreferrer">Try it online!</a>
+<p><a href="https://tio.run/##Hc3NCoJAFEDhfU9x00nuRcxyVerQCAlJZdCIQRYIUeQsUqxFZD67/awPH@d1v3ZdhaTKB1inGtgYBOy9hK/DZBHFSymiRERSrKJlKAKxCwMZrjzJMa/AmeTUu5Q1FIDNaDicTltqUg6Ke1Vd3B4XYIV7ANagcl2Sti1saP/gCcgkIerPPtd1lmSmqY6GsQ3i@WY9cEZEhiEzdeTfyzh/vxFT0yTq@b6vgWXB/VTWZxdYqnnfxLkz@YlZ23Uf" rel="nofollow noreferrer">Try it online!</a>
 <sub><s><a href="https://tio.run/##Pc3NCoJAFEDhvU9xM5MZxDRX/l0aISEpDRoxKAJBipqFgrWI1GefykUPcM73ftykzDGN83WSbThLcpZwtk02MYvYIY54vAWOpBTNE8yqBccFBseSKtemhTuQzp7PPW@gXYE2CAwu1a0Bswbt7oPWEeH7lFsWs2AYixcQjdOuRi0/GYY4B4RMXxOc1rq@j7LVLp05NqW6zk/ijH90MZp9T0hhGJQOShiGKpgmPKqmvXyhQv2OCkTH/cXLQcoP" rel="nofollow noreferrer">209b</a></s></sub>
 <sub><s><a href="https://tio.run/##Lc3BCoJAAIThe08xldkusmmeSl1aISHJCloxKARBjPKgoB0i89nNovs/873qW9eFfOeFG3@/lcIPhS9F4G894YqT50ovgORJXj7AakynYGkFcwGBczK4lhXuII0xmy2XLW0ibiDndpbeSrACyt2C0khdFzraX/wEURpSWxaVfV5wJbxoWh7bhIyfQz4uVPXo7teH3cQ0KFVVecnjv92r8x/6fhMSaRql7cBxnBEYQ52WVdZT0ag/ijg3F9/xqu26Dw" rel="nofollow noreferrer">215b</a></s></sub>
 <sub><s><a href="https://tio.run/##Nc3LaoNAGIbhvVfx1Vgzg0y0EkI8/DBChUoOhY7YRQgExBJdKGgWUvHabSLp/uF9f7vrNKWkH@L0IznulExSmSi5T3axjOR3HKl4r2uKLlVzg@iwXELkEC3cLTZreM5F@2lalGCDs1p53siHjBxUFBT5tYGoYZQ@jEHZtrQxzrgHMwbW@T5Xd16TkZ4sqzprjC36F1rUpvkVHd8/D6@uw7lpqlN1fv7n89v/@OFp9pllcT4GYRjqEAJd3rTF/ZrpAWMZkbt9dIq@vI3T9Ac" rel="nofollow noreferrer">235b</a></s></sub>
@@ -91,7 +91,7 @@ for x ($S)((#x!=##$T[++j]&amp;&amp;RANDOM%20))&amp;&amp;S[j]=`jot -cr 1 @ Z`||((
 <br>* Using <code>jot -c -r 28 64 90</code> is better than repeatedly doing <code>${(#)$((RANDOM%27+64))}</code>
 <br>* -20 bytes: removed <code>&quot;&quot;</code>, squished <code>jot</code> parameters to <code>-cr 1 @ Z</code>, replaced <code>exit</code> with <code>?</code> (crashes)
 <br>* -6 bytes: changed <code>$S</code> from string to array
-<br>* -5 bytes: excised variable <code>$n</code>, using expression <code>##$T[++j]</code> instead</sub></p>
+<br>* -8 bytes: replaced <code>$n</code> with expression <code>##$T[++j]</code>; put <code>jot</code> calls into function <code>p()</code></sub></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 272 bytes</h1>
 
