--- a/q/275303.html
+++ b/q/275303.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td></td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
+<tr d-ix="0"><td>079</td><td>JavaScript Node.js</td><td>240902T084009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275304#275304">l4m2</a></td></tr>
 <tr d-ix="1"><td>128</td><td>Python 3</td><td>240903T025930Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275315#275315">Lucenapo</a></td></tr>
 <tr d-ix="2"><td>086</td><td>JavaScript ES6</td><td>240902T093424Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275307#275307">Arnauld</a></td></tr>
 <tr d-ix="3"><td>052</td><td>05AB1E</td><td>240902T153854Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275310#275310">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>069</td><td>Google Sheets</td><td>240902T100442Z</td><td><a href="https://codegolf.stackexchange.com/questions/275303/is-it-a-date-format-of-yymmdd-mmddyy-and-or-ddmmyy/275308#275308">doubleun</a></td></tr>
 </table>
-<div id="pu0" class="pu"><p>Outdated. See Arnauld's answer for more golf of this answer.</p>
-<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 93 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 79 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;['024','402','420'].map(t=&gt;x[t%10]==(new Date(4+t.replace(/./g,c=&gt;x[c]+x[++c]+' '))+0)[8])
+<pre class="lang-javascript prettyprint-override"><code>s=&gt;[2,6,8].map(p=&gt;(new Date(4+[2,0,8].map(q=&gt;s[i=(p^q)%6]+s[i+1]))+0)[8]==s[i])
 </code></pre>
-<p><a href="https://tio.run/##fZbdboJAEIXv@xTcNECwyMxgK2nwqn0KYyJFNG1QidDWPr3dxbaBwhlN3MjH/C3n6L5lH1mdn16r5u5w3BSXbXo5p4ulG3HsTtw4YvvJkbsK91nlNenivGxuKVqlqXcoPp2nrCm8OGjCU1GVWV5403C6m@T2tnwVnJdBYBbXcX0/iPzlfOVfHvPjoT6WRVged976JmpfjrPNyrroL1dGmCUJZKTkJJuzOb2bayOMMRMlThjXU/pkpU9W@mSeK8zU22dfL2M5BdeTSGO4FxGNwX0hsr2MxxHjnIahnKRoiRQtkaIl6mnppyW7XBH1rvUQQyQ4qjPbf9Rp8R9i3CHjDrsaGiBYS3AtwbVEFARHjjsKGSBCUTNcawZr9RQ3QDgKPhQa2ahfSZEMw/5YjOOEcJzgnxKKZ/cPiCUJlD4rdmLFTqzYibGdGNuJsZ0MQjpm7DTGTmPsNMZOY@g0YvvGSCAC6m8RrgXmsgjMZZtAomsZYYYEaViMcwppDOfEIrfDIdHZ6WCcYLHayYdx7ZYlCT5GGMboGJEkvcc6ZKQw8LfXMkEMb8u6c2gLzKmtThee6wZbr/b9sMo2z4eNx5EfmK@Xbw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##fZZdbtNAFIXfu4pLJJQZJbiZO0mIQRNegA30MRjJpJNi5NqJxw2qEDtA4oVH2Afr6QZYQhibFsV1zjiSLfvzuT/jcx1/SvepW1fZtn5WlJf2sDEHZ5YrHs/HiyS6Trdia5aisJ/pdVpbMR15NHlAO7N0q8yI7fudfDpPRv5kpBIpRxO5WiTG@PNEHiq7u8kqKwYbN5BRZdPLt1luL26LtZjIqC4v6iorroSM3DbPajF4V/jbNmX1Jl1/FK6uyCzpyxlRbmtakRtTFEUpJWTIw3vROY3O5djf1GyVdR5uhJMv/ZV1Wbgyt1FeXgkv9rDdRXZvq1sh9mPKZJNiT08MidSXTMbQYJPmzg6kpFc0/PP7@93PH34/pBc0vPv1begjf5WHSbsRtfd2D2ctUpjFMWQqEFM1Mevqxl87wRgzHdBpxvkCdXKgTg7UybwIMJ/vOr39cCqmxvn0JMRwLVqHGFwXpZpaTusU45ieoZgq4CUV8JIKeEl1vHRfUnP4h1TnWgcxRBqrjnp7jI5KfIQYV8i4wmMP9RDMpXEujXNpHUCw5emRQ3pIIdUM55rBXB3H9RBWwYeiTizUg6WU7sv@synWaYV1Gr9K1HQ2f45YHEPrc2CcODBOHBgnxuPEeJwYj5NHyMeMJ43xpDGeNMaTxnDSFDc/jDREwP0twrlAXw0CfTVFINO1TGGGDOnZFMfUKsRwTGzypjlkuqY7qNPYrE3nfV27ZHGMPyM8Y/QZEcedx9pnKsDA317LNGJwWf4C" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Refer to <a href="https://codegolf.stackexchange.com/a/275307/">Arnauld's solution</a> for part of revision and version without <code>Date</code></p>
 <p>Arnauld's comment say pure <code>Date</code> won't work</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 128 bytes</h1>
